--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.10.0",
+    "jwt-decode": "^3.1.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
